feat(api): added swagger docu
